gap issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
 }
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #f9f9f9;
+  background-color: #f9f9f9dc;
   height: 100vh;
 }
 h1,
